--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ h3{
 .newsFeed{
   margin-top: 40px;
   font-size: 1.5rem;
-  font-family: cursive;
+  font-family: Comfortaa;
 }
 
 .announcementImage{
@@ -104,7 +104,7 @@ h3{
 }
 
 .miniHeaderTexts{
-  font-family: cursive;
+  font-family: Comfortaa;
   font-size: 1.5rem;
   color: #666666;
   margin-top: 10%;
