--- a/styles2.css
+++ b/styles2.css
@@ -91,7 +91,7 @@
 p{
   font-size: 1.1rem;
 line-height: 1.7;
-font-family: cursive;
+font-family: Comfortaa;
 }
 
 
@@ -108,7 +108,7 @@ body{
 }
 
 h6{
-  font-family: cursive;
+  font-family: Comfortaa;
   font-size: 1rem;
 }
 
