--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ h3{
 
 .bottomText{
   margin-left: 40px;
-  margin-top: 10%;
+  margin-top: 5rem;
   font-family: Comfortaa,fantasy;
 }
 
@@ -107,7 +107,7 @@ h3{
   font-family: Comfortaa;
   font-size: 1.5rem;
   color: #666666;
-  margin-top: 10%;
+  margin-top: 5rem;
 }
 
 .informationText{
