--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,10 @@ h3{
 }
 
 .headingPicture{
-  height: 650px;
-  overflow: clip;
 }
 
-#donutPicture{
-  min-width: 100%;
-  min-height: 100%;
-  padding-bottom: 200rem;
+.donutMaker{
+  width: 100%;
 }
 
 .announcements{
@@ -142,5 +138,13 @@ h3{
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+}
+*/
+
+/*
+#donutPicture{
+  min-width: 100%;
+  min-height: 100%;
+  padding-bottom: 200rem;
 }
 */
