--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ h3{
 
 .nokDonutLogo{
   position: absolute;
+  height: 20%;
 }
 
 .headingPicture{
@@ -95,8 +96,7 @@ h3{
 
 .locationImage{
   margin-top: 40px;
-  width: 450px;
-  length: 450px;
+  width: 90%;
 }
 
 .miniHeaderTexts{
