--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ h3{
 }
 
 .headingPicture{
+  background-color: #FDFD69;
 }
 
 .donutMaker{
@@ -38,7 +39,7 @@ h3{
 }
 
 .announcements{
-  padding-top: 80px;
+  padding-top: 90px;
   text-align: center;
   background-color: #FDFD69;
 }
